@@ -18,6 +18,7 @@ Revision history for Graphics-Primitive
   - Add Component::to_string
   - Let Container's layout_manager handle do_layout
   - Add 'pack' to the plan...
+  - Path: modify line_to and move_to to accept scalars
 
 0.06
   - Add Driver
